initialize endpoint added